[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greenlightadv"
version = "2.5"
description = "Greenhouse Simulation and Optimization Toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }

authors = [
    { name = "Shanaka Prageeth", email = "wasp.bites.jp@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "gymnasium",
    "openstudio==3.6.1",
    "gdown",
    "ray[rllib]",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/shanakaprageeth/GreenLightPlus"
BugReports = "https://github.com/shanakaprageeth/GreenLightPlus/issues"
Source = "https://github.com/shanakaprageeth/GreenLightPlus"

[project.scripts]
greenlightadv = "greenlightadv_shanaka.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/greenlightadv_shanaka"]